--- a/APSA_2012/Paper/APSA_Paper_2012.tex
+++ b/APSA_2012/Paper/APSA_Paper_2012.tex
@@ -167,8 +167,8 @@ hedge against the miss-weighting of components resulting from either
 strong or poor performance in the limited calibration period.  After
 discussing the data-quality challenges commonly experienced in
 ensemble forecasting, we introduce the basic EBMA model and outline
-modifications to the model for small samples and missing components in
-Section \ref{model}. In Section \ref{empirics}, we demonstrate how our
+modifications for small samples and missing components in Section
+\ref{model}. In Section \ref{empirics}, we demonstrate how our
 adjustment to the basic EBMA model improves out-of-sample forecasts in
 a simulation study and apply the method to predict the
 U.S. unemployment rate and the 2012 U.S. presidential election.
@@ -268,15 +268,16 @@ key economic indicators.\footnote{For a recent sample of these
 
 A final issue is the inconsistency with which forecasts are
 issued. Given the lengthy time periods often involved, there are
-likely to be many missing forecasts in any given time window.
-Moreover, we cannot assume that forecasts for any time period from a
-specific model or team are missing at random.  Particularly,
-unsuccessful forecasts may be suppressed and some forecasting efforts
-are only active for short time-periods due to poor performance.
-In addition, forecasts tend to accumulate with more potential
-components being available for more proximate time periods.
+likely to be many missing forecasts in any time window containing a
+modestly large number of observations.  Moreover, we cannot assume
+that forecasts for any time period from a specific model or team are
+missing at random.  Particularly, unsuccessful forecasts may be
+suppressed and some forecasting efforts are only active for short
+time-periods due to poor performance.  In addition, forecasts tend to
+accumulate with more potential components being available for more
+proximate time periods.
 
-While particularly egregious for specific application (c.f.,
+While particularly egregious for specific applications (c.f.,
 presidential election forecasting), these data issues are endemic to
 the social sciences and are far from benign. As we demonstrate below,
 calibrating large ensemble models on sparse (and even incomplete) data
@@ -309,7 +310,7 @@ addition, we have a number of different forecasts for this event
 $\mathbf{y}^t$ for a some past observations in period $t \in T$. The
 different predictions were generated from $K$ forecasting models or
 teams, $M_1, M_2, \ldots, M_K$. For each forecast we have a prior
-probability distribution $M_k\sim \pi(M_k)$. The PDF for
+probability distribution $M_k\sim \pi(M_k)$ and the PDF for
 $\mathbf{y}^t$ is denoted $p(\mathbf{y}^t|M_k)$. Under this model, the
 predictive PDF for the quantity of interest is
 $p(\mathbf{y}^{t^*}|M_k$), the conditional probability for each model
@@ -319,7 +320,7 @@ and the marginal predictive PDF is $$p(\mathbf{y}^{t^*}) =
 \underset{k=1}{\overset{K}{\sum}}
 p(\mathbf{y}^{t^*}|M_k)p(M_k|\mathbf{y}^{t}).$$
 \noindent The prediction via EBMA is thus a weighted average of the component
-PDFs. The weight for each model is based on its predictive performance
+PDFs and the weight for each model is based on its predictive performance
 on past observations in period $T$.
 
 The general EBMA procedure assumes $K$ forecasting models throughout
@@ -387,21 +388,25 @@ $\sigma^2$.  We estimate these using maximum likelihood methods
 \end{equation}
 
 
-\noindent cannot be maximized analytically. Instead we follow \citet{Raftery:2005} and use an EM algorithm to calibrate the weights associated with the maximum likelihood. Here EBMA is expressed as a finite mixture model
-\citep{mclachlan:peel:2000,imai:tingley:2012}.  To do so the
-unobserved quantities $z_k^t$ are introduced. $z_k^t$ is the probability that
-observation $y^t$ is ``best'' predicted by model $k$. These unobserved quantities are estimated (E-step) in the algorithm using the formula
+\noindent cannot be maximized analytically. Instead we follow
+\citet{Raftery:2005} and use an EM algorithm to calibrate the weights,
+an approach made possible by recognizing the EBMA here as a finite
+mixture model \citep{mclachlan:peel:2000,imai:tingley:2012}.  To do so
+the unobserved quantities $z_k^t$ are introduced, which represent the
+probability that observation $y^t$ is ``best'' predicted by model
+$k$. These unobserved quantities are estimated (E-step) in the
+algorithm using the formula
 \begin{equation}
 \label{E-step}
 \hat{z}^{(j+1)t}_{k} = \frac{\hat{w}^{(j)}_k
 p^{(j)}(y|f_{k}^{t})}{\overset{K}{\underset{k=1}{\sum}}\hat{w}^{(j)}_kp^{(j)}(y|f_{k}^{t})},
 \end{equation}
 \noindent where the superscript $j$ refers to the $j$th iteration of
-the EM algorithm.
+the EM algorithm.  Note that $w_k^{(j)}$ is the estimate of $w_k$ in the $j$th iteration
+and $p^{(j)}(.)$ is shown in Equation~\eqref{pdf}.
 
-Note that $w_k^{(j)}$ is the estimate of $w_k$ in the $j$th iteration and
-$p^{(j)}(.)$ is shown in \eqref{pdf}. Using the estimates of
-$z_{k}^{s|t}$, one can then easily calculate the maximizing value for the component weights. The M step of the algorithm therefore estimates these as 
+Using the estimates of $z_{k}^{s|t}$, one can then easily calculate
+the maximizing value (the M step) for the component weights as
 
 \begin{equation}
 \label{M-step}
@@ -409,7 +414,7 @@ $z_{k}^{s|t}$, one can then easily calculate the maximizing value for the compon
 \end{equation}
 
 \noindent where $n$ represents the number of observations in the
-calibration dataset. Finally, the variances are estimated based on
+calibration dataset. Finally, the common variance term is estimated as
 
 \begin{equation}
 \label{sigma}
@@ -494,7 +499,7 @@ we provide some guidance regarding the selection of $c$.
 
 The simulations are designed to reflect the ``best possible'' world
 for the baseline EBMA model.  The distribution of outcomes is drawn
-precisely from the mixture distribution shown in Equation~(\ref{pdf})
+precisely from the mixture distribution shown in Equation~(\ref{pdf}),
 where $\sigma^2 = 1$ and the individual component forecasts are drawn
 from the multivariate normal distribution $N(\mathbf{0}_K,
 \mathbf{I}_K)$.  Moreover, we assume that the true data generating
@@ -552,9 +557,11 @@ of the main advantages of the CRPS over other scoring rules is that it
 can be interpreted as the integral over all possible Brier scores
 \citep{Brier:1950} and takes into account the uncertainty of forecasts
 (i.e., the predictive distributions rather than the point prediction
-in isolation). The CRPS ranges from $0$ to $1$ with smaller numbers
-indicating a better forecast performance.\footnote{The mathematical
-  details behind the CRPS can be found in the Appendix.}
+in isolation). The CRPS ranges from $0$ to $n_{T^\ast}$ with smaller
+numbers indicating a better forecast
+performance.\footnote{Technically, it ranges from 0 to 1 for each of
+  the $n_{T^\ast}$ observations in the test sample.  The mathematical
+  details behind the CRPS can be found in Appendix B.}
 
 \begin{figure}[ht]
 \caption{CRPS with varying number of models and observations in calibration period}
@@ -564,10 +571,24 @@ indicating a better forecast performance.\footnote{The mathematical
 \end{figure}
 
 Figure~\ref{simplot1} shows how the out-of-sample performance of the
-EBMA method, as measured by CRPS against the ratio of the number of component models included and the size of the calibration period. As one can see, the performance of the EBMA model depends significantly on this ratio. As the number of forecast models included as components increases, or the calibration sample size decreases, CRPS rises. The predictive power of the EBMA model decreases as the number of components in
-the true data generating process increases. That is, as the number of
-model parameters that \textit{must} be correctly estimated to make
-accurate predictions increases, the quality of the forecast goes down. Second, CRPS is a decreasing function of $n_{T}$, i.e. the performance of the baseline EBMA model improves as the calibration sample grows.
+EBMA method, as measured by CRPS against the ratio of the number of
+component models included and the size of the calibration period
+($\frac{K}{n_T}$). As one can see, the performance of the EBMA model
+depends significantly on this ratio. As the number of forecast models
+included as components increases, or the calibration sample size
+decreases, CRPS rises.  That is, the predictive performance of the
+ensembles decreases as a function of $\frac{K}{n_T}$.
+
+Thinking of each parameter in isolation, the predictive power of the
+EBMA model decreases as the number of components in the true data
+generating process increases. That is, as the number of model
+parameters that \textit{must} be correctly estimated to make accurate
+predictions increases, the quality of the forecast goes down. Second,
+CRPS is a decreasing function of $n_{T}$, i.e. the performance of the
+baseline EBMA model improves as the calibration sample
+grows.\footnote{Examining each parameter in isolation supports this
+  claim, although the relationship his highly interactive (results not
+  shown).}
 
 %Second, Figure~\ref{simplot1} shows out-of-sample CRPS when $n_T=5$
 %(black), $n_T=11$ (blue), and $n_T=100$ (red).  For all values of $k$,
@@ -592,44 +613,48 @@ accurate predictions increases, the quality of the forecast goes down. Second, C
 The remaining question, then, is to what degree adding the ``wisdom of
 crowds'' parameter to the baseline model improves performance.  To
 answer, we examined the out-of-sample predictive performance of EBMA
-for differing values of $c$. 
+for differing values of $c$.  Figure~\ref{3d} shows a smoothed plot of
+the median CRPS for differing values of the ratio $\frac{K}{n_T}$ and
+$c$ in our simulation. Darker gray tones depict higher CRPS
+levels. The plot shows that while CRPS generally still increases with
+higher values of $\frac{K}{n_T}$, including a ``wisdom of crowds''
+parameter within the EBMA algorithm can help when $\frac{K}{n_T}$ is
+large.
 
 
-
-Figure~\ref{3d} shows the median CRPS recorded for differing values of the ratio $\frac{K}{n_T}$, and $c$ in our simulation. Darker gray tones depict higher CRPS levels. The 3D plot clearly shows that while CRPS generally still increases with higher values of $\frac{K}{n_T}$, including a ``wisdom of crowds'' parameter within the EBMA algorithm can help. 
-
-% For the
-%purposes of clarity, we focus on only three subsets from the
-%simulations: ($n_T=3, K=15$), ($n_T=5, K=9$), and ($n_T=35, K=5$).
-While this is far from a complete analysis of the simulated data, it
-does serve the limited purposes of demonstrating that, in some
-circumstances, the ``wisdom of crowds'' parameter aids prediction
-under some circumstances.
-
-There are two aspects of Figure~\ref{3D} that are particularly
+There are two aspects of Figure~\ref{3d} that are particularly
 salient.  First, note that the addition of $c$ to the base EBMA model
 does not uniformly aid in out-of-sample performance.  When the
-calibration sample is modestly large and there are few
-models to calibrate, the addition of $c$ uniformly decreases model
-performance.  However, with small calibration samples and modestly
-large numbers of component models, the addition of $c$ aids
-predictive performance. 
+calibration sample is modestly large and there are few models to
+calibrate, the addition of $c$ uniformly decreases model performance.
+However, with small calibration samples and modestly large numbers of
+component models, the addition of $c$ aids predictive
+performance. Second, the relationship between $c$ and CRPS is
+non-monotonic.  CRPS decreases for small to modest values of $c$, but
+eventually begins to rise.  While this is far from a complete analysis
+of the simulated data, it does serve the limited purposes of
+demonstrating that, in some circumstances, the ``wisdom of crowds''
+parameter aids prediction under some circumstances.
 
-Second, the relationship between $c$ and CRPS
-is non-monotonic.  CRPS decreases for small to modest values of $c$,
-but eventually begins to rise.
-
-Based on our examination of the broader set of simulations, we generally recommend the selection of
-values of $c \in [0, 0.1]$. The simulations favor small values of
-$c$ as the ratio of $K$ to $n_T$ increases. As a starting value, we
-recommend $c=0.05$, however the ``best'' value of $c$ may value from application to application. In our experience based on the simulations, as well as cross-validation studies during the applications presented below, we feel a $c$ value at $0.05$ is the best choice. Generally speaking, in choosing $c$ the researcher faces a trade-off between possible overweighting certain models based on the performance in short calibration periods and moving too far into the direction of a simple average. A relatively small $c$ seems to generally aid performance. It may be preferable to many researchers to choose the value of $c$
+Generally speaking, in choosing $c$ the researcher faces a trade-off
+between possible overweighting certain models based on the performance
+in short calibration periods and moving too far into the direction of
+a simple average. A relatively small $c$ seems to generally aid
+performance.  Based on our examination of the broader set of
+simulations, we generally recommend the selection of values of $c \in
+[0, 0.1]$. The simulations favor small values of $c$ as the ratio of
+$K$ to $n_T$ decreases.  In our experience based on the simulations,
+as well as cross-validation studies during the applications presented
+below, we feel a $c$ value at $0.05$ a good default choice, although
+the ``best'' value of $c$ may vary from application to application.
+It may be preferable to many researchers to choose the value of $c$
 based on a k-fold cross-validation study of the calibration sample.
 
 Bearing these results in mind, we now turn to examining how these
 methods work in two areas that exemplify forecasting in the social
 sciences. The first is the prediction of unemployment in the United
-States, and the second in the area of predicting the vote for the
-incumbent party in U.S. presidential elections. Both areas have well
+States, and the second is predicting the vote for the incumbent-party
+candidate in U.S. presidential elections. Both areas have well
 developed forecasting traditions in the scholarly and policy
 community.
 
@@ -642,7 +667,7 @@ field of economics and statistics. Policy makers and businesses both
 have enormous interest in the calculation of accurate forecasts of
 economic variables. These forecasts are often created using a wide
 variety of statistical models, however often professional forecast are
-also based on expert knowledge.\footnote{For a more comprehensive
+based only on expert knowledge.\footnote{For a more comprehensive
   overview on foresting of economic variables and time-series
   forecasting see \citet{Elliott:Timmermann:2008} and
   \citet{Goijer:Hyndman:2006}.}  The majority of scholars employ
@@ -680,7 +705,8 @@ unemployment rate, inflation, and GDP growth.\footnote{The
 In the first month of every quarter, a survey is sent to selected
 forecasters and is returned by the middle of the second month of the
 quarter. Forecasts are made for the current quarter as well as several
-quarters into the future.
+quarters into the future, and a significant amount of attention is
+given to the average (usually the median) reported forecast.
 
 This plethora of predictions seems ideal for applying EBMA.
 Nonetheless, it is plagued by the same issues as discussed in
@@ -695,31 +721,33 @@ forecast horizon to be four quarters into the future, i.e. predictions
 made in the first quarter of 2002 are for the first quarter of 2003
 and so on. In total, the \textit{SPF} data on unemployment contains
 forecasts by 569 different teams. However, for any quarter, the
-average number of forecast teams making a prediction for four quarters
-into the future is quite small and the majority of observations for
-any given quarter are missing.\footnote{On average only 8.4 per cent
-  of all teams make a forecast for any one quarter.}
+average number of teams making a prediction for four quarters into the
+future is quite small and the majority of observations for any given
+quarter are missing.\footnote{On average only 8.4 per cent of all
+  teams make a forecast for any one quarter.}
 
-To provide a meaningful benchmark, we also include the ``Green Book''
-forecasts produced by the Federal Reserve. These forecasts are made by
-the research staff of the Board of Governors and are handed out prior
-to meetings of the Federal Reserve Open Market Committee
-(FOMC).\footnote{One issue with forecast evaluation in many domains in
-  economics is that the macroeconomic data (i.e. our ``true
-  observations'') are revised regularly. The unemployment rate for a
-  given quarter at that time is generally an estimate that is subject
-  to revision when better data becomes available. When evaluating
-  forecasts, it is thus important whether predictions are compared to
-  the outcome data for each quarter available at the time or whether
-  the revised and most recent data is used. As
-  \citet{Croushore:Stark:2001} describe, depending on the forecast
-  exercise, it can make a difference whether the forecast models are
-  evaluated using ``real-time'' (original estimate) or the ``latest
-  available'' (revised) data. We have decided here to use the ``latest
-  available'' data and do not believe that this choice affects our results, as all predictions are evaluated against the same data
-  and EBMA is a mixture of the component forecast models. Thus the
-  component models and our benchmark model are estimated and evaluated
-  on the same data.} %However, in a future version of this paper we will
+To provide a meaningful benchmark for our adjusted EBMA model, we also
+include the ``Green Book'' forecasts produced by the Federal Reserve
+in the ensemble. These forecasts are made by the research staff of the
+Board of Governors and are handed out prior to meetings of the Federal
+Reserve Open Market Committee (FOMC).\footnote{One issue with forecast
+  evaluation in many domains in economics is that the macroeconomic
+  data (i.e. our ``true observations'') are revised regularly. The
+  unemployment rate for a given quarter at that time is generally an
+  estimate that is subject to revision when better data becomes
+  available. When evaluating forecasts, it is thus important whether
+  predictions are compared to the outcome data for each quarter
+  available at the time or whether the revised and most recent data is
+  used. As \citet{Croushore:Stark:2001} describe, depending on the
+  forecast exercise, it can make a difference whether the forecast
+  models are evaluated using ``real-time'' (original estimate) or the
+  ``latest available'' (revised) data. We have decided here to use the
+  ``latest available'' data and do not believe that this choice
+  affects our results, as all predictions are evaluated against the
+  same data and EBMA is a mixture of the component forecast
+  models. Thus the component models and our benchmark model are
+  estimated and evaluated on the same
+  data.} %However, in a future version of this paper we will
   %replicate this analysis using real-time data to evaluate the
   %forecasts.} % DO WE WANT TO DO THAT BEFORE SUBMISSION?
 
@@ -794,18 +822,20 @@ Definitions of model fit statistics are provided in the Appendix. The model with
 \end{table}
 
 
-Table~\ref{compareTable1} formally compares these baseline models
-using all eight of the metrics to EBMA models with $c=$0, 0.05, 0.1,
-and 1 respectively.  To do this, we focus on eight model fit indices
-available in the literature.  The eight metrics we use are mean
-absolute error (MAE), root mean squared error (RMSE), median absolute
-deviation (MAD), root mean squared logarithmic error (RMSLE), mean
-absolute percentage error (MAPE), median absolute percentage error
-(MEAPE), median relative absolute error (MRAE) and percent worse (PW).
-The latter two metrics are measured relative to a naive model, simply
-predicting the future rate of unemployment as being the same as the
-current rate of unemployment.  Further details for these metrics are
-shown in the Appendix \citep{brandt:freeman:schrodt:2011}.
+Table~\ref{compareTable1} formally compares these baseline models to
+EBMA models with $c=$0, 0.05, 0.1, and 1 respectively.  To do this, we
+focus on eight model fit indices available in the literature
+\citep{brandt:freeman:schrodt:2011}.\footnote{We are unable to use
+  CRPS here because we do not have the predictive PDFs for the Green
+  Book, SPF Mean, or SPF Median models.}  The eight metrics we use are
+mean absolute error (MAE), root mean squared error (RMSE), median
+absolute deviation (MAD), root mean squared logarithmic error (RMSLE),
+mean absolute percentage error (MAPE), median absolute percentage
+error (MEAPE), median relative absolute error (MRAE) and percent worse
+(PW).  The latter two metrics are measured relative to a naive model,
+simply predicting the future rate of unemployment as being the same as
+the current rate of unemployment.  Further details for these metrics
+are shown the Appendix B.
 
 
 The bolded cells in each column of Table~\ref{compareTable1} indicate
@@ -901,8 +931,15 @@ cases.  That is, each model $k$ offers forecasts for only a subset of
 cases $n_k \subset n$.  To create a fair comparison, therefore, we
 calculate these fit indices only for $n_k \forall k \in [1,K]$.  By
 this measure, the EBMA model performs very well.
-Table~\ref{compareTable2} provides a summary of these results.
-The rows of the table show the number of metrics by which EBMA outperforms components in each column, while columns show the number of forecasts made by these models. The table is filled with the share of the total number of component models falling into this cell. Thus for the top left cell EBMA was better on at least 7 out of eight metrics for models making between 1 and 10 predictions, approximately 20\% of models belong in this category. 
+Table~\ref{compareTable2} provides a summary of these results.  The
+rows of the table show the number of metrics by which EBMA outperforms
+components in each column, while columns show the number of forecasts
+made by these models. The table is filled with the share of the total
+number of component models falling into each cell. Thus, the values
+in all of the cell will sum to unity. For instance, the top-left cell
+represents cases where EBMA is better on at least 7 out of eight
+metrics for component models making between 1 and 10 predictions.
+Approximately 20\% of models belong in this category.
 
 Notably, the relative superiority of EBMA to its components is
 somewhat less for components that provide few forecasts.  This
@@ -910,12 +947,13 @@ reflects the fact that with so many forecasts, some are likely to be
 more accurate than the ensemble by chance alone. Additionally, when
 the number of forecasts is low it is likely that a given model
 received less weight than it ``deserves'' given the model's
-performance.\footnote{See the Appendix for a discussion of how EBMA
-  handles missing component forecasts.}  As can be seen in Table~\ref{compareTable2} however, across a large
-  number of forecasts, EBMA significantly outperforms any of its
-  components, i.e. when moving to the right in the table the values in the lower cells decrease. It is also worth noting
-  that only 6 out of the total 163 components outperforms EBMA on
-  every metric.
+performance.\footnote{See Appendix A for a discussion of how EBMA
+  handles missing component forecasts.} However,
+Table~\ref{compareTable2}, shows that, across a large number of
+forecasts, EBMA significantly outperforms any of its components.  That
+is, when moving to the right in the table the values in the lower
+cells decrease. It is also worth noting that only 6 out of the total
+163 components outperforms EBMA on every metric.
 
 
 
@@ -923,8 +961,8 @@ performance.\footnote{See the Appendix for a discussion of how EBMA
 \subsection{U.S. presidential elections}
 
 We now turn to the task of combining expert predictions of
-U.S. presidential elections.\footnote{See also
-  \citep{Montgomery:2012c}.}  This example provides a clear
+U.S. presidential elections.\footnote{See also,
+  \citet{Montgomery:2012c}.}  This example provides a clear
 illustration of the difficulties of creating ensemble forecasts in the
 social sciences and allows us to further illustrate the advantages of
 generating predictive PDFs when focusing on a limited number of
@@ -992,11 +1030,22 @@ Forecasts were published prior to each election by \textbf{F}air, \textbf{A}bram
 \end{table}
 
 
-Using the forecasts shown in Table 1,\footnote{The out-of-sample predictions for these models were collected from the individual journal articles, personal websites and symposia introductions. When multiple forecasts were made we used the authors' preferred forecast, or took the mean if no preference was given \citep{Hibbs:1992,Holbrook:1996,LewisBeckTien:1996,EriksonWlezien:1996,Abramowitz:2000,Hibbs:2000,CampbellGarand:2000,Campbell:2000,Campbell:2001,Hibbs:2004,Campbell:2004,Campbell:2005,Campbell:2008a,Abramowitz:2012,Campbell:2012,Cuzan:2012,EriksonWlezien:2012,Fair:2012,Hibbs:2012a,Holbrook:2012,LewisBeckTien:2012,Lockerbie:2012}.} we fit an EBMA model with
-$c=0.05$.  The model weights and in-sample fit statistics for the ensemble and its components are shown in Table~\ref{presModel}.  As
-can be seen, the EBMA model assigns the majority of weight to the Abramowitz model with the model by Hibbs receiving the second largest weight. These weights are based on the performance of each
-model in forecasting the incumbent vote share in the presidential elections between 1992 and 2008. The Cuz\`an and Bundrick model is
-weighted to such a small degree because only out-of-sample predictions for 2004 and 2008 were available here.
+Using the forecasts shown in Table~\ref{tab:one},\footnote{The
+  out-of-sample predictions for these models were collected from the
+  individual journal articles, personal websites and symposia
+  introductions. When multiple forecasts were made we used the
+  authors' preferred forecast, or took the mean if no preference was
+  given
+  \citep{Hibbs:1992,Holbrook:1996,LewisBeckTien:1996,EriksonWlezien:1996,Abramowitz:2000,Hibbs:2000,CampbellGarand:2000,Campbell:2000,Campbell:2001,Hibbs:2004,Campbell:2004,Campbell:2005,Campbell:2008a,Abramowitz:2012,Campbell:2012,Cuzan:2012,EriksonWlezien:2012,Fair:2012,Hibbs:2012a,Holbrook:2012,LewisBeckTien:2012,Lockerbie:2012}.}
+we fit an EBMA model with $c=0.05$.  The model weights and in-sample
+fit statistics for the ensemble and its components are shown in
+Table~\ref{presModel}.  As can be seen, the EBMA model assigns the
+majority of weight to the Abramowitz model with the model by Hibbs
+receiving the second largest weight. These weights are based on the
+performance of each model in forecasting the incumbent vote share in
+the presidential elections between 1992 and 2008. The Cuz\`an and
+Bundrick model is weighted to such a small degree because only
+out-of-sample predictions for 2004 and 2008 were available.
 
 
 % latex table generated in R 2.15.1 by xtable 1.7-0 package
@@ -1038,7 +1087,7 @@ weighted to such a small degree because only out-of-sample predictions for 2004 
 
 Figure~\ref{pres} shows the posterior predictive distribution for the
 2008 election (top) and, based on the forecasts from each of the
-component models, the 2012 election.  Component models predictive
+component models, the 2012 election.  Component models' predictive
 distributions are shown in color (scaled by their respective weight),
 while the EBMA predictive distribution is shown in black, the bold
 dash displays the point prediction for the EBMA model. The vertical
@@ -1058,7 +1107,7 @@ prediction. The vertical dashed lines show the actual result of the 2008 and 201
 
 
 The EBMA model ($c=0.05$) predicted 50.3\% of the two-party vote share
-for Obama.  This resulted in a reasonably large absolute error of
+for Obama in 2012.  This resulted in a reasonably large absolute error of
 1.7\%.\footnote{The EBMA model assigned considerable weight to models
   predicting a Romney \textit{victory}, especially \citet{Hibbs:2012a}
   and \citet{LewisBeckTien:2012}.}  Figure~\ref{pres} shows that the
@@ -1089,11 +1138,11 @@ A more important comparison is to examine how EBMA performs versus
 other methods of aggregating forecasts for the 2012 election.
 Table~\ref{presModel12} shows the point predictions and absolute
 errors associated with the simple arithmetic mean, the median, and
-EBMA models fit with $c=0$, $c=0.05$, and $c=0.1$with $c=0$.  While
-the differences in model weights are relatively small, the EBMA
-prediction for 2012 was 49\% and 50.1\% for and EBMA model with $c=0$
-and $c=0.1$ respectively -- both considerably worse than the
-prediction with $c=0.05$. 
+EBMA models fit with $c=0$, $c=0.05$, and $c=0.1$.  While the
+differences in model weights are relatively small, the EBMA prediction
+for 2012 was 49\% and 50.1\% for and EBMA model with $c=0$ and $c=0.1$
+respectively -- both considerably worse than the prediction with
+$c=0.05$.
 
 EBMA with a ``wisdom of crowds'' parameter of $0.05$ also did
 considerably better relative to naive approaches to aggregation. The simple
@@ -1147,15 +1196,15 @@ neatly illustrates the common difficulties facing forecasters in the
 social science, and provides an illustrative example for applied
 researchers going forward.
 
-A comprehensive approach to the data problems raise in
-section~\ref{theproblem} would be to estimate the ``wisdom of crowds''
+A comprehensive approach to the data problems raised in
+Section~\ref{theproblem} would be to estimate the ``wisdom of crowds''
 parameter within the EBMA algorithm specifically for each forecasting
-application. So far we refrain from doing as we are concerned with the
-number of parameters being estimated on relatively small numbers of
-observations (i.e. limited degrees of freedom). In addition, simple
-solutions have so far failed because of issues of identifiability. In
-future work we plan to rewrite the EBMA algorithm further to make
-estimation of the $c$ possible.
+application. So far we have refrained from doing this as we are
+concerned with the number of parameters being estimated on relatively
+small numbers of observations (i.e. limited degrees of freedom). In
+addition, simple solutions have so far failed because of issues of
+identifiability. In future work we plan to rewrite the EBMA algorithm
+further to make estimation of the $c$ possible.
 % Missing data is always a conundrum, and a pain. This is especially
 % true when creating ensemble predictions. The combination of missing
 % observations with short calibration periods is especially
@@ -1165,16 +1214,17 @@ estimation of the $c$ possible.
 % a way around this problem by the introduction of a parameter which
 % spreads the weights out over the ensemble components in a way that
 % helps to preserve the advantages of the ensemble.
-In addition we plan to implement imputation techniques within the EBMA
-algorith to handle missing data. While our current algorithm follows
-\citet{Fraley:2010} and allows for the inclusion of models with
-missing predictions, those are severely down weighted based on the
-number of missing observations. The algorithm employed here is driven
-by the application in meteorological sciences where weather stations
-may fail to report observations randomly. In the social sciences
-however different approaches may be more appropriate. In the future we
-thus plan to implement imputation of missing observations via copula
-methods within the EBMA framework.
+In addition, we plan to implement imputation techniques within the
+EBMA algorith to handle missing data. The approach presented here
+follows \citet{Fraley:2010}.  This is an improvement in that it allows
+for the inclusion of models with missing predictions, but components
+with missingness are severely down-weighted. Moreover, the algorithm
+shown in Appendix A was developed in the context of meteorological
+sciences, where weather stations may fail to report observations
+randomly. In the social sciences, however, different approaches may be
+more appropriate. In the future, therefore, we thus plan to implement
+imputation of missing observations via copula methods within the EBMA
+framework.
 
 %%Bib 
 \singlespacing
